--- a/sb/index.html
+++ b/sb/index.html
@@ -73,10 +73,21 @@
                 </div>
            
           </div>
+          <h2>Demo JavaScript in Head</h2>
+
+        <p id="demo">A Paragraph.</p>
+
+            <button type="button" onclick="myFunction()">Try it</button>
         <!-- Bootstrap core JS-->
 
         
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+
+        <script>
+            function myFunction() {
+              document.getElementById("demo").innerHTML = "Paragraph changed.";
+            }
+            </script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
     </body>
